syntax = "proto3";

package common.v1;

option go_package = "github.com/alexander-kartavtsev/starship/shared/pkg/proto/common/v1;commonV1";

import "google/protobuf/timestamp.proto";

// Метод оповещения пользователя
message NotificationMethod {
  string provider_name = 1; // Провайдер: telegram, email, push и т.д.
  string target = 2; // Адрес/идентификатор назначения (email, чат-id)
}

// Регистрационная информация пользователя
message UserInfo {
  string login = 1;
  string email = 2;
  repeated NotificationMethod notification_methods = 3;
}

// Пользователь
message User {
  string uuid = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}
